# pdf-ocr

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run.bat  setup.bat
.github/workflows/: ci.yml
src/: __init__.py  config.py  image_processing.py  layout_reconstructor.py  ocr_engine.py  pdf_utils.py  pipeline.py  table_detector.py
