[project]
name = "pdf-ocr"
version = "0.1.0"
description = "PDF para OCR com pytesseract — converte PDFs em texto preservando layout"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pdf2image>=1.17",
    "pytesseract>=0.3",
    "Pillow>=10.0",
]

[project.scripts]
pdf-ocr = "main:main"
