[project]
name = "pdf-ocr"
version = "0.1.0"
description = "PDF para OCR com pytesseract — converte PDFs em texto preservando layout"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytesseract>=0.3",
    "Pillow>=10.0",
    "pymupdf>=1.27.2.3",
]

[project.scripts]
pdf-ocr = "main:main"

[tool.uv]
package = false

[dependency-groups]
dev = []
