[project]
name = "pdf-ocr"
version = "0.1.0"
description = "PDF para OCR com pytesseract — converte PDFs em texto preservando layout"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytesseract>=0.3",
    "Pillow>=10.0",
    "pymupdf>=1.27.2.3",
    "img2table>=2.0.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
]

[project.scripts]
pdf-ocr = "main:main"

[tool.uv]
package = false

[dependency-groups]
dev = ["ruff>=0.9"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
